--- a/README
+++ b/README
@@ -1,8 +1,11 @@
 Authors:
     Majd Zayyad
-    Hamza Abuleil
+    Hamzeh Abu Leil
     Abd Shkerat
     Ameen Darwish
+
+Video:
+    https://drive.google.com/file/d/1o3yb1s6P8WfRqZopCcWF4d-isFoq0D_e/view?usp=sharing
 
 Files:
     AI project report.pdf - The report.
